<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="API_KEY">AIzaSyB9nBqhoH9KPAKVnvMU03V9y3U14qC8Ufc</string>
    <string name="encodedKey">QUl6YVN5QjluQnFob0g5S1BBS1Zudk1VMDNWOXkzVTE0cUM4VWZj</string>
    <string name="app_name">Lyber Dev</string>
    <string name="lyber_investments_reinvented">Lyber, crypto at your fingertips.</string>
    <string name="diversified_regular_simple">Simple, secure and diversified investment.</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="for_security_phone">For security reasons, we need your phone number. We’ll send you a confirmation code by message.</string>
    <string name="we_ve_sent_you_a_confirmation_code">We’ve sent you a confirmation code.</string>
    <string name="enter_code">Enter code</string>
    <string name="create_a_pin">Create a PIN</string>
    <string name="secure_your_account_by_creating_a_4_digit_code">Secure your account by creating a 4 digit code.</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_notifications_so_you_don_t_miss_any_updates_from_lyber">Enable notifications so you don\'t miss any updates from Lyber.</string>
    <string name="not_now">Not now</string>
    <string name="a_new_code_will_be_sent_in_00_15">A new code will be sent in 00:15</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="activate_face_id">Activate Face ID / Biometrics</string>
    <string name="activate_face_message">Access Lyber fast and easily by logging with Face ID / Biometrics.</string>
    <string name="decline">Decline</string>
    <string name="activate">Activate</string>
    <string name="choose_strategy">Choose a strategy</string>
    <string name="titleOne">A diversified strategy</string>
    <string name="titleTwo">A flexible frequency</string>
    <string name="titleThree">An evolving and automated portfolio</string>
    <string name="subTitleOne">Choose an investment strategy according to your risk profile. The allocation to crypto-currencies or FIAT will depend on your selection.</string>
    <string name="subTitleTwo">Investing the same amount regularly is the best way to see profits. Every week, every month, it\'s up to you.</string>
    <string name="subTitleThree">Once the regular investment is set, your portfolio will be managed automatically and you will be able to see its evolution.</string>
    <string name="next">Next</string>
    <string name="complete_acc_to_start_investing">Complete your account to start investing</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_an_account_strike"><strike>Create an account</strike></string>
    <string name="_2">2</string>
    <string name="fill_personal_data">Fill personal data</string>
    <string name="fill_personal_data_strike"><strike>Fill personal data</strike></string>
    <string name="verify_your_identity">Verify your identity</string>
    <string name="verify_your_identity_strike"><strike>Verify your identity</strike></string>
    <string name="_3">3</string>
    <string name="make_your_first_investment">Make your first investment</string>
    <string name="make_your_first_investment_strike"><strike>Make your first investment</strike></string>
    <string name="_4">4</string>
    <string name="invest_money">Invest money</string>
    <string name="complete_your_account">Complete your account</string>
    <string name="to_start_investing">To start investing</string>
    <string name="withdraw">Withdraw</string>
    <string name="your_assets_to_your_bank_account">Your assets to your bank account</string>
    <string name="exchange">Exchange</string>
    <string name="exchange_platform">Exchange Platform</string>
    <string name="trade_one_asset_against_another">Trade one asset against another</string>
    <string name="personal_data">Personal data</string>
    <string name="personal_data_subtitle">For legal reasons, we need you to answer some questions and provide us with personal information.</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_birth_date">Birth Date</string>
    <string name="hint_nationality">Nationality</string>
    <string name="send_to_lyber">Send to Lyber</string>
    <string name="email_address">Email address</string>
    <string name="subtitle_email">This information will be used for security purposes and to confirm your transactions.</string>
    <string name="hint_email">Email</string>
    <string name="v_rification_email">Email verification</string>
    <string name="subtitle_verification_email">We have sent an email to frida@gmail.com Check your mailbox and click on the confirmation link to continue.</string>
    <string name="open_apple_mail">Open Apple Mail</string>
    <string name="open_gmail">Open Gmail</string>
    <string name="address">Address</string>
    <string name="subtitle_address">We need this information to ensure that crypto services are legal in your country of residence.</string>
    <string name="hint_street_and_number">Street number</string>
    <string name="hint_building_floor">Building, floor</string>
    <string name="hint_city">City</string>
    <string name="hint_zip_code">ZIP code</string>
    <string name="hint_country">Country</string>
    <string name="investment_experience">Investment experience</string>
    <string name="subtitle_investment_exp">You must answer these questions within the legal framework of international investment regulations.</string>
    <string name="hint_choose_cryptos">Your investment experience with cryptos</string>
    <string name="hint_choose">Choose</string>
    <string name="hint_source_income">Your source of income</string>
    <string name="hint_work_industry">Your work industry</string>
    <string name="hint_annual_income">Your annual income</string>
    <string name="bottom_sheet_cypto_exp_title">What’s your investment experience with cryptos ?</string>
    <string name="verification_ongoing">Verification ongoing …</string>
    <string name="identity_verification">Identity verification</string>
    <string name="subtitle_verify_your_identity">This step protects you from fraud and identity theft. Use your phone to:</string>
    <string name="_1">1</string>
    <string name="take_a_picture_of_your_papers"><stroke>Take a picture of your documents</stroke></string>
    <string name="national_id_card_passport_ou_driving_license"><stroke>National ID card, passport or driving licence</stroke></string>
    <string name="take_a_selfie"><stroke>Take a selfie</stroke></string>
    <string name="open_camera">Open camera</string>
    <string name="openSettings">Open settings</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="investment_strategies">Investment strategies</string>
    <string name="subtitle_investment_strategies">The strategies are there to help you dilute your investments over several assets.\nThe strategies proposed by Lyber do not represent investment advice. Users are solely responsible for their choice of strategy.</string>
    <string name="build_my_own_strategy">Build my own strategy</string>
    <string name="choose_this_strategy">Choose this strategy</string>
    <string name="a_new_code_will_be_sent_in">A new code will be sent in</string>
    <string name="subtitle_build_strategy">Add as many assets as you wish and choose their respective allocation.</string>
    <string name="save_my_strategy">Save my strategy</string>
    <string name="save_strategy_caption">You must add at least one asset to create your strategy.</string>
    <string name="view_all_16_available_assets"><u>View all 16 available assets</u></string>
    <string name="auto">Auto</string>
    <string name="allocations">Allocations</string>
    <string name="allocation">Allocation</string>
    <string name="edit_my_strategy"><u>Edit my strategy</u></string>
    <string name="pick_another_strategy">Pick another strategy</string>
    <string name="invest_using_my_strategy">Invest Using my Strategy</string>
    <string name="using_my_strategy">Using my strategy</string>
    <string name="deposit_or_singular_buy"><u>Deposit or singular buy</u></string>
    <string name="ask_me_later">Ask me later</string>
    <string name="btc_eth_sol_avax_5_other_assets">BTC, ETH, SOL, AVAX +5 other assets</string>
    <string name="preview_my_investment">Preview my investment</string>
    <string name="add_a_frequency">Add a frequency</string>
    <string name="amount">Amount</string>
    <string name="credit_card">Credit card</string>
    <string name="_0103">***0103</string>
    <string name="apple_pay">Apple pay</string>
    <string name="bank_account">Bank account</string>
    <string name="add_a_bank_account">Add a bank account</string>
    <string name="add_a_credit_card">Add a credit card</string>
    <string name="unique_investment">Unique investment</string>
    <string name="resend">Resend code</string>
    <string name="alphabets">qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="my_assets">My assets</string>
    <string name="analytics">Analytics</string>
    <string name="recurring_investment">Recurring investment</string>
    <string name="view_all"><u>View all</u></string>
    <string name="total_earnings">Total earnings</string>
    <string name="about_value">Bitcoin is a decentralized digital currency, without a central bank or gove… <b><u>View more</u></b></string>
    <string name="log_out"><u>Logout</u></string>
    <string name="log_out_normal">Log out</string>
    <string name="stop_reg"><u>Stop Registration</u></string>
    <string name="view_all_underline"><u>View all</u></string>
    <string name="add_payment_method"><u>Add payment method</u></string>
    <string name="make_investment">Make investment</string>
    <string name="birth_place">Birth Place</string>
    <string name="birth_country">Birth Country</string>
    <string name="specified_us_person">Are you a US citizen?</string>
    <string name="hint_state">State</string>
    <string name="hint_personal_assets">Your personal assets</string>
    <string name="edit"><b>Edit</b></string>
    <string name="resend_email"><u>RESEND EMAIL</u></string>
    <string name="logout_message">Are you sure you want to Log out ? </string>
    <string name="reg_message">The progress of your registration will be lost.</string>
    <string name="no_t">No</string>
    <string name="yes_t">Yes</string>
    <string name="logout"><u>Log out</u></string>
    <string name="note_add_bitcoin_address"><b>Important note:</b> Your note goes here and goes on a big amount of line</string>
    <string name="subtitle_crypto_book">The address book allows cryptocurrency withdrawals to be made only at addresses already designated in your address book. You can also activate your address book for these addresses.</string>
    <string name="login_by_email"><u>Login by email</u></string>
    <string name="add">Add</string>
    <string name="your_activity_on_lyber">Your activity on Lyber</string>
    <string name="english">English</string>
    <string name="french">Français</string>
    <string name="sign_up_in_5">Sign up in 5min</string>
    <string name="your_new_rib">Your new Bank account details</string>
    <string name="rib_name">Bank account Name</string>
    <string name="iban">IBAN</string>
    <string name="bic">BIC</string>
    <string name="owner_name">Owner\'s name</string>
    <string name="bank_country">Bank country</string>
    <string name="owner_name_error">The owner name field must contain only letters, spaces, and hyphens</string>
</resources>