<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:scrollbarStyle="insideInset"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            style="@style/TitleText"
            android:text="@string/personal_data" />

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/personal_data_subtitle" />

        <EditText
            android:id="@+id/etFirstName"
            style="@style/EditTextTheme"
            android:layout_marginTop="24dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/hint_first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"

            android:hint="@string/hint_last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />


        <EditText
            android:id="@+id/etBirthPlace"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/birth_place"
            android:imeOptions="actionNext"
            android:inputType="textPostalAddress"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/etBirthDate"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="16dp"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_birth_date"
            android:inputType="date"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/etBirthCountry"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:drawablePadding="16dp"
            android:focusableInTouchMode="false"
            android:hint="@string/birth_country"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <EditText
            android:id="@+id/etNationality"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:drawablePadding="16dp"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_nationality"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <AutoCompleteTextView
            android:id="@+id/etSpecifiedUsPerson"
            style="@style/EditTextTheme"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:drawablePadding="16dp"
            android:focusableInTouchMode="false"
            android:hint="@string/specified_us_person"
            android:maxLines="1"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

    </LinearLayout>

</ScrollView>