<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            style="@style/SubheadMabryMedium"
            android:layout_centerInParent="true"
            android:text="@string/your_new_rib" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etRibName"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/rib_name"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingHorizontal="12dp" />

    <EditText
        android:id="@+id/etIBanNo"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/iban"
        android:inputType="text|textCapCharacters"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingHorizontal="12dp" />

    <EditText
        android:id="@+id/etBic"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/bic"
        android:inputType="text|textCapCharacters"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:paddingHorizontal="12dp" />

    <EditText
        android:id="@+id/etOwnerName"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/owner_name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="12dp" />

    <TextView
        android:id="@+id/tvBankCountry"
        style="@style/EditTextTheme"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center_vertical"
        android:hint="@string/bank_country"
        android:paddingHorizontal="12dp"
        app:drawableEndCompat="@drawable/ic_drop_down" />
    <TextView
        android:id="@+id/tvOwnerValid"
        style="@style/SubTitleText"
        android:lineSpacingExtra="4dp"
        android:layout_marginVertical="4dp"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"
        android:text="@string/owner_name_error"
        android:textColor="@color/red_500" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/ButtonStyleMabryMedium"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="32dp"
        android:background="@drawable/button_purple_500"
        android:text="@string/add" />

</LinearLayout>