<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <TextView
            style="@style/TitleText"
            android:text="@string/investment_experience" />

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="4dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/subtitle_investment_exp" />

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="24dp"
            android:text="@string/hint_choose_cryptos" />

        <EditText
            android:id="@+id/etCryptoExp"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_choose"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="16dp"
            android:text="@string/hint_source_income" />

        <EditText
            android:id="@+id/etSourceIncome"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_choose"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="16dp"
            android:text="@string/hint_work_industry" />

        <EditText
            android:id="@+id/etChooseIndustry"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_choose"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"/>

        <TextView
            style="@style/SubTitleText"
            android:layout_marginTop="16dp"
            android:text="@string/hint_annual_income" />

        <EditText
            android:id="@+id/etAnnualIncome"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_choose"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp" />

        <TextView
            style="@style/SubTitleText"
            android:visibility="visible"
            android:layout_marginTop="16dp"
            android:text="@string/your_activity_on_lyber" />

        <EditText
            android:visibility="visible"
            android:id="@+id/etYourActivity"
            style="@style/EditTextTheme"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:cursorVisible="false"
            android:drawableEnd="@drawable/ic_drop_down"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_choose"
            android:paddingHorizontal="12dp"
            android:paddingVertical="16dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize" />

    </LinearLayout>

</ScrollView>