<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:paddingBottom="12dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/llButtons"
        android:layout_marginBottom="42dp"
        android:background="@drawable/login" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/HeadingStyle"
            android:layout_marginHorizontal="24dp"
            android:gravity="start"
            android:text="@string/lyber_investments_reinvented" />

        <TextView
            android:id="@+id/tvSubTitle"
            style="@style/SubHeadlineStyle"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/diversified_regular_simple" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/ButtonStyleMabryMedium"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/sign_up_in_5" />

        <TextView
            android:id="@+id/tvLogin"
            style="@style/ButtonStyleMabryMedium"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_gray_50"
            android:gravity="center"
            android:text="@string/log_in"
            android:textColor="@color/purple_gray_800" />

    </LinearLayout>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:layout_marginStart="28dp"
        android:src="@drawable/ic_logo" />
    <ImageView
        android:id="@+id/ivLanguage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:padding="4dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/flag_france" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cvLanguage"
        android:visibility="gone"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/ivLanguage"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvEnglish"
                style="@style/SubheadMabry"
                android:padding="8dp"
                android:text="@string/english"/>
            <TextView
                android:id="@+id/tvFrench"
                style="@style/SubheadMabry"
                android:padding="8dp"
                android:text="@string/french"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
